maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:6: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Unit
  var (i,j) = trouveBiscuit()
      ^ShortestPathMaze:15: warning: enclosing method trouveBiscuit has result type Unit: return value discarded
      return(i,j)
      ^